2012-07-27  Per Bothner  <per@bothner.com>

	* RunTestScript.java: Support new directives Java-options
	and Kawa-options.

2012-06-08  Jamison Hope  <jrh@theptrgroup.com>

	* RunTestScript.java: Add support for Common Lisp.

2012-05-28  Per Bothner  <per@bothner.com>

	* PreProcess.java (version_features): Fix typo.

2011-12-12  Per Bothner  <per@bothner.com>

	* RunTestScript.java (run): Check standard error before checking
	standard output, so we report unexpected diagnostics.

2011-11-15  Per Bothner  <per@bothner.com>

	* RunTestScript.java (<init>): Don't say test passes when it fails.

2011-10-08  Charles Turner  <chturne@gmail.com>

	* IntHashTable (new class): Specialised hash table for Object ->
	int mappings.
	* Makefile.am: Updated accordingly.

2011-04-10  Per Bothner  <per@bothner.com>

	* PreProcess.java: Change 'use:java.dyn' feature name to
	'use:java.lang.invoke' to match recent JSR-292 changes.

2011-04-03  Per Bothner  <per@bothner.com>

	* RunTestScript.java (checkOutput): Fix thinko.

2011-03-20  Benny Tsai <benny.tsai@gmail.com>

	* PreProcess.java: Fix handling of Windows line-ending.
	I.e. drop special handling of '\r' - just treat it as space, like '\t'.

2011-03-18  Per Bothner  <per@bothner.com>

	* RunTestScript.java: New class, for simple one-file test cases.
	* Makefile.am: Update accordingly.

2010-11-29  Per Bothner  <per@bothner.com>

	* PreProcess.java: Add "use:javax.lang.model" as a separate feature
	name, implied by JAVA6.

2010-08-28  Per Bothner  <per@bothner.com>

	* PreProcess.java (version_features): Add "java7".

2010-08-07  Per Bothner  <per@bothner.com>

	* AbstractHashTable.java (clear):  Fix thinko.

2010-07-23  Per Bothner  <per@bothner.com>

	* AbstractHashTable.java (<init>): New default constructor.
	(DEFAULT_INITIAL_SIZE): Moved from GeneralHashTable.
	* GeneralHashTable.java (<init>): Default constructor
	just calls super default constructor.

2010-04-18  Per Bothner  <per@bothner.com>
